[tool.poetry]
name = "impulsogov-back"
version = "0.1.0"
description = ""
authors = ["Tarso Jabbes <tarsojabbes@gmail.com>"]
readme = "README.md"
packages = [{include = "impulsogov_back"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
